# tovald

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-publish.yml  docker-build.yml  lint-and-test.yml
tests/: compiler_test.py  main_test.py
tests/static/double_heading_tree/doc/level-1/level-2/level-3/: index.md
tests/static/double_heading_tree/doc/sub-page/: index.md
tests/static/missing_index_tree/doc/: index.md
tests/static/valid_tree/doc/level-1/: index.md
tests/static/valid_tree/doc/sub-page/: index.md
tests/static/valid_tree/sphinx/: conf.py  index.md
tests/static/valid_tree/toc/: index.md
tests/static/valid_tree/toc/level-1/: index.md
tests/static/valid_tree/toc/level-1/level-2/: index.md
tests/static/valid_tree/toc/level-1/level-2/level-3/: index.md
tests/static/valid_tree/toc/sub-page/: index.md
tests/static/valid_tree/xml/: index.conf
tests/static/valid_tree/xml/level-1/: index.conf
tests/static/valid_tree/xml/sub-page/: index.conf
tovald/: __init__.py  conf.py  main.py
tovald/assets/templates/: header.tpl
tovald/compiler/: __init__.py  main.py
tovald/static/: toctree.j2
