[project]
name = "tovald"
version = "0.0.0"
description = "Publish rich markdown documentation to Confluence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "myst-parser==4.0",
    "sphinx==8.1",
    "sphinx-toolbox==3.8",
    "sphinxcontrib-confluencebuilder==2.8",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",   # assert
  "INP001", # implicit-namespace-package
  "SIM110", # reimplemented-builtin
]

[tool.uv]
dev-dependencies = [
    "black",
    "pre-commit",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff",
    "yamllint",
]
