[project]
name = "tovald"
version = "0.1.6"
description = "Publish rich markdown documentation to Confluence"
readme = "README.md"
authors = [
    {name="Charles SENGES", email="charles.senges.io+github@protonmail.com"}
]
license = "GPL-3.0-or-later"

requires-python = ">=3.12"
dependencies = [
    "myst-parser==4.0",
    "sphinx==8.1",
    "sphinx-toolbox==3.8",
    "sphinxcontrib-confluencebuilder==2.8",
]

[project.scripts]
tovald = "tovald.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.black]
line-length = 120

[tool.coverage.run]
relative_files = true
omit = [
  "tovald/conf.py",
  "tests/*",
  "*/*.bak/*",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", # missing-trailing-comma (Conflicts with formatter)
  "D203",   # one-blank-line-before-class (Conflicts with D211)
  "D213",   # multi-line-summary-first-line (Conflicts with D212)
  "ISC001", # single-line-implicit-string-concatenation (Conflicts with formatter)
  "T201",   # print
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",   # assert
  "INP001", # implicit-namespace-package
  "SIM110", # reimplemented-builtin
]

[tool.setuptools]
packages = [
  "tovald",
  "tovald.compiler",
]

[tool.setuptools.package-data]
tovald = [
  "static/*",
]

[tool.uv]
dev-dependencies = [
    "black",
    "pre-commit",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff",
    "yamllint",
]
